# crumbs

./: .gitignore  Makefile  README.md  collection.c  collection.h  crumbs  crumbs.c  crumbs.h  crumbs_impl.h  crumbs_sdl.h  input.c  input.h  input_map.c  input_map.h  main.c  notes.txt
demo/: Makefile  assets.c  assets.h  demo  demo.c  demo.h  main.c
demo/common/: collision.h  dialog.h  util.h
demo/entities/: billy.c  billy.h  block.c  block.h  debug_menu.c  debug_menu.h  demo_dialog.c  demo_dialog.h  fireball.c  fireball.h  fish_menu.c  fish_menu.h  henry.c  henry.h  info_dialog.c  info_dialog.h  info_menu.c  info_menu.h  input_menu.c  input_menu.h  jimbo.c  jimbo.h  jimbo_dialog.c  jimbo_dialog.h  pause_menu.c  pause_menu.h  player.c  player.h  scene_menu.c  scene_menu.h  sign.c  sign.h  sign_dialog.c  sign_dialog.h  transition.c  transition.h
demo/input/: Makefile  debug_menu_input.c  demo  demo.c  dialog_input.c  fish_menu_input.c  info_menu_input.c  input.h  input_menu_input.c  pause_menu_input.c  root_input.c  scenes_menu_input.c
demo/scenes/: scene0.c  scene2.c  scene3.c  scene4.c  scenes.c  scenes.h  scnene1.c
demo/util/: overlay.c  overlay.h  (+4 more)
impl/: Makefile.am  Makefile.in  configure  crumbs.c  impl.h  keyboard.c
impl/Makefiles/linux/: Makefile
impl/Makefiles/mac/: Makefile
impl/Makefiles/mingw/: Makefile
impl/Makefiles/msvc/: Makefile
impl/autom4te.cache/: output.2  output.3  requests  traces.0  traces.2  traces.3
penut/: Makefile  README.md  draw.c  draw.h  entity_types.h  get_lib.sh  input.c  input.h  main.c  pe.c  pe.h  penut.c  penut.h
(+6 files in other folders)
